--- a/CAPSTONE_TEAM01_2024/Views/Categories/SentEmail.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SentEmail.cshtml
@@ -168,8 +168,19 @@ ViewData["Title"] = "Sent Email";
                     <input type="hidden" id="threadId" name="threadId"  />
 
                     <div class="mb-3">
-                        <label for="recipientEmail" class="form-label">Người Nhận</label>
-                        <input type="email" class="form-control" id="recipientEmail" name="recipientEmail" required>
+                        <label for="recipientTo" class="form-label">Người Nhận</label>
+                        <div class="input-group mb-2">
+                            <span class="input-group-text" style="width: 50px;">To:</span>
+                            <input type="email" class="form-control" id="recipientTo" name="recipientTo" required>
+                        </div>
+                        <div class="input-group mb-2">
+                            <span class="input-group-text" style="width: 50px;">Cc:</span>
+                            <input type="email" class="form-control" id="recipientCc" name="recipientCc">
+                        </div>
+                        <div class="input-group">
+                            <span class="input-group-text" style="width: 50px;">Bcc:</span>
+                            <input type="email" class="form-control" id="recipientBcc" name="recipientBcc">
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="emailSubject" class="form-label">Tiêu Đề</label>
