Detail Email functionality mostly done (missing download file)

--- a/CAPSTONE_TEAM01_2024/Views/Categories/SentEmail.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/SentEmail.cshtml
@@ -332,7 +332,7 @@ ViewData["Title"] = "Sent Email";
 
     }
 
-// Edit Modal JS
+// Detail Modal JS
 $(document).on('click', '.btn-view-email', function () {
     var emailId = $(this).data('email-id'); // Get the emailId from the button's data attribute
 
