--- a/CAPSTONE_TEAM01_2024/Views/Categories/ReceiveEmail.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/ReceiveEmail.cshtml
@@ -92,7 +92,7 @@
                                                 data-bs-toggle="modal" 
                                                                          data-bs-target="#ReplyMailModal"
                                                                          data-cc-email="@string.Join(", ", ccRecipients)"
-                                                                         data-sender-email="@string.Join(", ", toRecipients)" 
+                                                                         data-sender-email="@email.Sender" 
                                                                          data-thread-id="@email.ThreadId">
                                                 <i class="fa-solid fa-reply custom-icon"></i>
                                             </button>
